Remove optional member fields in beans to unblock Java-serialization (#308)